# Thesis

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  MakefileTask.sh  MathTest.hpp  PartialMakefileTask.sh  README.md  Region.cpp  Region.hpp  Sphere.cpp  Sphere.hpp  YAMLUtils.hpp  cmake_install.cmake  findAllObjs.py  findNotCompiledObjs.py  getCPPFilePaths.py  install_manifest.txt  moveObjs.py
CMakeScripts/: ReRunCMake.make
Core/: Decimate.hpp  Mesh.hpp  MeshUtils.hpp  MinimumBoundingSphere.hpp  Quadric.hpp  SQEM.h  SphereMesh.hpp  Window.cpp  Window.hpp
Core/src/: Mesh.cpp  MeshUtils.cpp  Quadric.cpp  SphereMesh.cpp
Debug/: SphereMesh.txt  SphereMesh.yaml
Includes/glfw/: glfw3.h
Math/: Math.hpp  Scalar.hpp
Math/Matrix/: Matrix3.hpp  Matrix4.hpp
Math/Matrix/src/: Matrix3.cpp  Matrix4.cpp
Math/Rotation/: Quaternion.hpp
Math/Rotation/src/: Quaternion.cpp
Math/Vector/: Vector3.hpp  Vector4.hpp
Math/Vector/src/: Vector3.cpp  Vector4.cpp
Shaders/: test.frag
System/: Shader.hpp  Window.hpp
System/src/: Shader.cpp  Window.cpp
Test/: Test.hpp
Test/src/: Test.cpp
Thesis.build/Debug/ALL_BUILD.build/: Script-7A1A4B6DABCD1F5BB0AE8290.sh
Thesis.build/Debug/Thesis.build/Objects-normal-ubsan/x86_64/: Matrix4.dia  Sphere.dia  main.dia
Thesis.build/Debug/Thesis.build/Objects-normal/x86_64/: Matrix4.dia  Thesis.LinkFileList  main.dia
Thesis.build/Debug/ZERO_CHECK.build/: Script-6ABF3A5BABDC6C4119700CBC.sh
Thesis.build/Debug/imgui.build/Objects-normal/x86_64/: imgui.LinkFileList
Thesis.build/Debug/imguizmo.build/Objects-normal/x86_64/: imguizmo.LinkFileList
Thesis.build/Debug/install.build/: Script-93426DA6A4AC2C2AC9CE883C.sh
Thesis.xcodeproj/: project.pbxproj
Thesis.xcodeproj/project.xcworkspace/xcuserdata/davidepaollilo.xcuserdatad/: UserInterfaceState.xcuserstate
Thesis.xcodeproj/xcshareddata/xcschemes/: Thesis.xcscheme  install.xcscheme
Thesis.xcodeproj/xcuserdata/davidepaollilo.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
